--- a/baras/public/index.html
+++ b/baras/public/index.html
@@ -4,7 +4,17 @@
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>eact App</title>
+    <script
+      src="https://kit.fontawesome.com/0e10ae0cae.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="/your-path-to-fontawesome/css/fontawesome.css"
+      rel="stylesheet"
+    />
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
+    <title>Baras</title>
   </head>
   <body>
     <div id="root"></div>
