--- a/baras/public/index.html
+++ b/baras/public/index.html
@@ -17,6 +17,10 @@
     <title>Baras</title>
   </head>
   <body>
+    <audio controls autoplay>
+      <source src="strings.mp3" type="audio/mp3" />
+      <source src="strings.mp3" type="audio/mpeg" />
+    </audio>
     <div id="root"></div>
     <!--
       This HTML file is a template.
