--- a/baras/public/index.html
+++ b/baras/public/index.html
@@ -14,6 +14,11 @@
     />
     <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <title>Baras</title>
   </head>
   <body>
